# handlegraph-cli

./: Cargo.toml  bench_rust.sh
src/: interface.rs  io.rs  lib.rs  main.rs  mmap_gfa.rs
