[package]
name = "tui-handlegraph"
version = "0.1.0"
authors = ["christian <christian@chfi.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlegraph = { path = "../rs-handlegraph" }
gfa = { path = "../rs-gfa" }

anyhow = "1.0"
bstr = "0.2"

rayon = "1.5"

succinct = "0.5"

tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

[dependencies.crossterm]
version = "0.18"
features = ["event-stream"]
